hphp/test/slow/clsmeth/inst-meth-abstr.php.expectf
Fatal error: Uncaught exception 'BadMethodCallException' with message 'Non-static method C::foo() cannot be called statically' in %s/inst-meth-abstr.php:9
Stack trace:
%a {main}
